--- a/package.json
+++ b/package.json
@@ -41,7 +41,7 @@
     "zone.js": "0.8.18"
   },
   "devDependencies": {
-    "@ionic/app-scripts": "^3.1.5-201712181510",
+    "@ionic/app-scripts": "^3.1.6-201712271536",
     "@types/jasmine": "^2.8.2",
     "@types/node": "^8.5.2",
     "angular2-template-loader": "^0.6.2",
@@ -60,7 +60,8 @@
     "protractor": "^5.2.2",
     "ts-loader": "^3.2.0",
     "ts-node": "^4.1.0",
-    "typescript": "2.4.2"
+    "typescript": "2.4.2",
+    "ws": "3.3.2"
   },
   "description": "Daily list app for your todos"
 }
